--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,8 +25,8 @@
     <color name="green9">#012b20</color>
 
     <color name="blue1">#f2f1f9</color>
-    <color name="blue2">#c2c2dc</color>
-    <color name="blue3">#9595bf</color>
+    <color name="blue2">#d5d5f2</color>
+    <color name="blue3">#a9a9d9</color>
     <color name="blue4">#6a6a9e</color>
     <color name="blue5">#515185</color>
     <color name="blue6">#414161</color>
@@ -37,10 +37,10 @@
 
     <color name="red1">#fadbcf</color>
     <color name="red2">#f0b49e</color>
-    <color name="red3">#f57546</color>
+    <color name="red3">#f59b7a</color>
     <color name="red4">#c46847</color>
     <color name="red5">#a34726</color>
-    <color name="red6">#8a2b09</color>
+    <color name="red6">#8a4329</color>
     <color name="red7">#571b05</color>
     <color name="red8">#2b0c01</color>
 
