--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -140,6 +140,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/info_list">
 
                     <TextView
+                        android:id="@+id/tags_header"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/tags"
@@ -147,16 +148,16 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
-                    <LinearLayout
+                    <com.google.android.flexbox.FlexboxLayout
                         android:id="@+id/tag_list"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:maxWidth="200dp"
-                        android:orientation="vertical"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent">
+                        android:layout_marginTop="@dimen/medium_padding"
+                        app:flexDirection="row"
+                        app:flexWrap="wrap"
+                        app:layout_constraintTop_toBottomOf="@+id/tags_header">
 
-                    </LinearLayout>
+                    </com.google.android.flexbox.FlexboxLayout>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -177,15 +178,17 @@
                     android:textStyle="bold"
                     app:layout_constraintTop_toBottomOf="@+id/tags_container" />
 
-                <LinearLayout
+                <com.google.android.flexbox.FlexboxLayout
                     android:id="@+id/urls"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
-                    android:orientation="vertical"
+                    app:flexDirection="row"
+                    app:flexWrap="wrap"
+                    app:showDivider="middle"
                     app:layout_constraintTop_toBottomOf="@id/urls_title">
 
-                </LinearLayout>
+                </com.google.android.flexbox.FlexboxLayout>
 
                 <View
                     android:layout_width="match_parent"
