--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,9 +7,13 @@
     <color name="lightGrey">#a0a0a0</color>
     <color name="white">#FFFFFFFF</color>
     <color name="darkGreen">#008000</color>
+    <color name="darkGreen2">#136313</color>
     <color name="darkRed">#FF0000</color>
+    <color name="darkRed2">#971515</color>
     <color name="lightGreen">#00FF00</color>
+    <color name="lightGreen2">#60bf60</color>
     <color name="lightRed">#FF4040</color>
+    <color name="lightRed2">#ba2c2c</color>
     <color name="golden">#b99800</color>
     <color name="lightGolden">#f2d654</color>
 
@@ -71,7 +75,9 @@
     <color name="accent8">@color/red5</color>
 
     <color name="green">@color/darkGreen</color>
+    <color name="greenFaded">@color/darkGreen2</color>
     <color name="red">@color/darkRed</color>
+    <color name="redFaded">@color/darkRed2</color>
     <color name="blue">@color/light_blue_A200</color>
 
     <color name="iconColor">@color/base8</color>
