--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,7 +11,7 @@
 
     <style name="CVTextAppearance" parent="TextAppearance.AppCompat">
         <item name="fontFamily">@font/roboto</item>
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">@dimen/medium_text</item>
         <item name="color">@color/textColor</item>
         <item name="android:textColor">@color/textColor</item>
         <item name="android:textColorLink">@color/textColor</item>
@@ -26,7 +26,7 @@
 
     <style name="CVTextViewStyle" parent="android:Widget.TextView">
         <item name="fontFamily">@font/roboto</item>
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">@dimen/medium_text</item>
         <item name="color">@color/textColor</item>
         <item name="android:textColor">@color/textColor</item>
         <item name="android:textColorLink">@color/textColor</item>
