Portfolio evaluation 1. Implemented: periodically started service that calculates portfolio valuation at the end of the previous day. 2. Added to settings fragment: Selector at what time user wants (if so) to receive daily notification about portfolio state. 3. SharedPreferences were switched to Kotlin delegates scheme. 4. InfoFragment tags & links switched to FlexBox, icons added to known links types. 5. Link Stat added 6. Ai chat switched to RecyclerView with 2 types of ViewHolders: for in and out messages.

--- a/app/src/main/res/layout/fragment_ai_chat.xml
+++ b/app/src/main/res/layout/fragment_ai_chat.xml
@@ -7,22 +7,16 @@
     android:background="@drawable/background_gradient315"
     tools:context=".views.fragments.AiChatFragment">
 
-    <ScrollView
-        android:id="@+id/container_answer"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:padding="@dimen/medium_padding"
-        android:contentDescription="@string/ai_chat_hint"
-        app:layout_constraintBottom_toTopOf="@+id/container_question"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <LinearLayout
-            android:id="@+id/chat_window"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/chat_rv"
+            android:nestedScrollingEnabled="false"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" />
-
-    </ScrollView>
+            android:layout_margin="@dimen/medium_padding"
+            app:reverseLayout="true"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toTopOf="@+id/container_question"
+            tools:listitem="@layout/chat_item" />
 
     <LinearLayout
         android:id="@+id/container_question"
