--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -95,5 +95,6 @@
     <color name="light_blue_A400">#FF00B0FF</color>
 
     <color name="black_overlay">#66000000</color>
+    <color name="volumeColor">#D0D0D0</color>
 
 </resources>
