--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,10 +31,10 @@
     <color name="blue1">#f2f1f9</color>
     <color name="blue2">#d5d5f2</color>
     <color name="blue3">#a9a9d9</color>
-    <color name="blue4">#6a6a9e</color>
-    <color name="blue5">#515185</color>
-    <color name="blue6">#414161</color>
-    <color name="blue7">#31313f</color>
+    <color name="blue4">#8282bd</color>
+    <color name="blue5">#6a6a9e</color>
+    <color name="blue6">#515185</color>
+    <color name="blue7">#414161</color>
     <color name="blue8">#000033</color>
     <color name="blue8Transparent">#200e0e0f</color>
     <color name="blue9">#00001a</color>
