--- a/app/src/main/res/layout/alert_view_change_position.xml
+++ b/app/src/main/res/layout/alert_view_change_position.xml
@@ -32,6 +32,15 @@
         android:layout_height="1dp"
         app:layout_constraintTop_toBottomOf="@+id/alert_text" />
 
+    <LinearLayout
+        android:id="@+id/symbol_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/alert_text"
+        >
+
     <TextView
         android:id="@+id/symbol"
         android:layout_width="wrap_content"
@@ -39,10 +48,19 @@
         android:padding="@dimen/medium_padding"
         android:textSize="@dimen/big_text"
         android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/price"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/alert_text"
+        android:maxLines="1"
+        android:layout_weight="1"
         tools:text="Symbol" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Price:"
+        android:maxLines="1"
+        app:layout_constraintTop_toBottomOf="@+id/alert_text"
+        android:padding="@dimen/medium_padding"
+        app:layout_constraintStart_toEndOf="@+id/symbol"
+        />
 
     <TextView
         android:id="@+id/price"
@@ -51,23 +69,26 @@
         android:padding="@dimen/medium_padding"
         android:textSize="@dimen/big_text"
         android:textStyle="bold"
+        android:maxLines="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/symbol"
         app:layout_constraintTop_toBottomOf="@+id/alert_text"
         tools:text="Price" />
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/input_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_vertical"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/symbol">
+        app:layout_constraintTop_toBottomOf="@+id/symbol_container">
 
         <EditText
             android:id="@+id/input"
             android:layout_width="0dp"
             android:layout_height="48dp"
-            android:layout_weight="4"
+            android:layout_weight="1"
             android:hint="@string/qty_hint"
             android:inputType="numberDecimal|number|numberSigned"
             android:padding="@dimen/medium_padding"
@@ -76,13 +97,22 @@
             app:layout_constraintTop_toBottomOf="@+id/symbol" />
 
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Value:"
+            android:maxLines="1"
+            app:layout_constraintTop_toBottomOf="@+id/alert_text"
+            android:padding="@dimen/medium_padding"
+            app:layout_constraintStart_toEndOf="@+id/symbol"
+            />
+
+        <TextView
             android:id="@+id/input_value"
-            android:layout_weight="6"
             android:padding="@dimen/medium_padding"
             android:textSize="@dimen/big_text"
             android:textStyle="bold"
-            android:layout_width="0dp"
-            tools:text="0.00"
+            android:layout_width="wrap_content"
+            android:text="0.00"
             android:textAlignment="viewEnd"
             android:layout_height="wrap_content" />
 
