--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -49,16 +49,22 @@
         <item name="color">@color/textColor</item>
         <item name="android:colorAccent">@color/textColor</item>
         <item name="buttonBarNegativeButtonStyle">@style/CVNegativeButtonStyle</item>
+        <item name="buttonBarNeutralButtonStyle">@style/CVNeutralButtonStyle</item>
         <item name="buttonBarPositiveButtonStyle">@style/CVPositiveButtonStyle</item>
     </style>
 
     <style name="CVNegativeButtonStyle" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
-        <item name="backgroundTint">@color/base1</item>
+        <item name="backgroundTint">@color/base3</item>
+        <item name="android:textColor">@color/textColor</item>
+    </style>
+
+    <style name="CVNeutralButtonStyle" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
+        <item name="backgroundTint">@color/base3</item>
         <item name="android:textColor">@color/textColor</item>
     </style>
 
     <style name="CVPositiveButtonStyle" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
-        <item name="backgroundTint">@color/base1</item>
+        <item name="backgroundTint">@color/base3</item>
         <item name="android:textColor">@color/textColor</item>
     </style>
 
