--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,5 @@
     <dimen name="logo_min_width">24dp</dimen>
     <dimen name="card_elevation">6dp</dimen>
     <dimen name="biggest_text">18sp</dimen>
+    <dimen name="mcap_chart_height">250dp</dimen>
 </resources>
