--- a/app/src/main/res/layout/fragment_portfolio.xml
+++ b/app/src/main/res/layout/fragment_portfolio.xml
@@ -10,52 +10,70 @@
         android:id="@+id/portfolio_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/medium_padding"
-        android:paddingBottom="@dimen/medium_padding"
         android:orientation="horizontal"
-        app:layout_constraintTop_toTopOf="parent">
+        android:gravity="center_vertical"
+        app:layout_constraintTop_toTopOf="parent" >
+
+
+    <TextView
+        android:id="@+id/portfolio_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/portfolio"
+        android:layout_margin="@dimen/medium_padding"
+        android:layout_weight="1"
+        android:layout_gravity="center_vertical|start"
+        android:textSize="@dimen/big_text"
+        android:textStyle="bold"
+        />
 
         <TextView
-            android:id="@+id/portfolio_text"
+            android:id="@+id/portfolio_performance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Portfolio"
-            android:layout_gravity="center_vertical|start"
+            android:text="@string/portfolio_performance"
+            android:layout_margin="@dimen/medium_padding"
+            android:layout_gravity="center_vertical|end"
             android:textSize="@dimen/big_text"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:paddingTop="@dimen/small_padding"
+            android:paddingBottom="@dimen/small_padding"
+            android:paddingStart="@dimen/medium_padding"
+            android:paddingEnd="@dimen/medium_padding"
+            android:background="@drawable/rounded_rectangle_base"
+            />
+    </LinearLayout>
+
+    <include
+        layout="@layout/horizontal_line"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        app:layout_constraintTop_toBottomOf="@+id/portfolio_header"
+        android:layout_margin="@dimen/small_padding" />
+
+    <LinearLayout
+        android:id="@+id/portfolio_valuation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/medium_padding"
+        android:paddingBottom="@dimen/medium_padding"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@+id/portfolio_header">
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="20"
-            android:orientation="vertical"
-            android:layout_gravity="end" >
+            android:orientation="horizontal"
+            android:gravity="center_vertical" >
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Value:"
+                android:text="@string/value_colon"
+                android:maxLines="1"
                 android:textSize="@dimen/medium_text"
-                android:layout_gravity="end"
-                android:textAlignment="viewEnd" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Total P/L:"
-                android:textSize="@dimen/medium_text"
-                android:layout_gravity="end"
-                android:textAlignment="viewEnd" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="15"
-            android:orientation="vertical"
-            android:layout_gravity="end" >
+                android:layout_weight="1"
+                android:layout_gravity="start"
+                android:textAlignment="viewStart" />
 
             <TextView
                 android:id="@+id/total_value"
@@ -66,6 +84,24 @@
                 android:layout_gravity="end"
                 android:textAlignment="viewEnd" />
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/total_p_l"
+                android:textSize="@dimen/medium_text"
+                android:maxLines="1"
+                android:layout_weight="1"
+                android:layout_gravity="start"
+                android:textAlignment="viewStart" />
+
             <TextView
                 android:id="@+id/total_pnl"
                 android:layout_width="wrap_content"
@@ -73,6 +109,8 @@
                 tools:text="P/L:"
                 android:textSize="@dimen/medium_text"
                 android:layout_gravity="end"
+                android:paddingStart="@dimen/medium_padding"
+                android:paddingEnd="@dimen/medium_padding"
                 android:textAlignment="viewEnd" />
 
             <TextView
@@ -83,6 +121,45 @@
                 android:textSize="@dimen/medium_text"
                 android:layout_gravity="end"
                 android:textAlignment="viewEnd" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/daily_p_l"
+                android:textSize="@dimen/medium_text"
+                android:maxLines="1"
+                android:layout_weight="1"
+                android:layout_gravity="start"
+                android:textAlignment="viewStart" />
+
+            <TextView
+                android:id="@+id/daily_pnl"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="P/L:"
+                android:textSize="@dimen/medium_text"
+                android:layout_gravity="end"
+                android:paddingStart="@dimen/medium_padding"
+                android:paddingEnd="@dimen/medium_padding"
+                android:textAlignment="viewEnd" />
+
+            <TextView
+                android:id="@+id/daily_pnl_percent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="P/L:"
+                android:textSize="@dimen/medium_text"
+                android:layout_gravity="end"
+                android:textAlignment="viewEnd" />
+
         </LinearLayout>
 
     </LinearLayout>
@@ -92,7 +169,7 @@
         layout="@layout/portfolio_coin_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/portfolio_header" />
+        app:layout_constraintTop_toBottomOf="@+id/portfolio_valuation" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/portfolio_recycler"
